traefik/awesome-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: awesome-app
  name: awesome-app-deploy
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: awesome-app
  template:
    metadata:
      labels:
        app: awesome-app
    spec:
      containers:
      - image: ghcr.io/arogic/awesome-app:1.0.63
        name: awesome-app
        ports:
          - name: http
            containerPort: 8080
        imagePullPolicy: Always
      imagePullSecrets:
        - name: argocd-pull-secret
      nodeSelector:
        kubernetes.io/os: linux
