traefik/awesome-app-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: awesome-app
  name: awesome-app
  namespace: demo
spec:
  type: ClusterIP
  selector:
    app: awesome-app
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
