traefik/awesome-app-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awesome-app-ingress
  namespace: demo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: awesome-app.127.0.0.1.sslip.io
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: awesome-app
              port:
                number: 80
